--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,7 +28,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install pytest
     - name: Run tests
-        run: pytest
+        run: |
+          cd .\test\
+          pytest test_buscaHorario.py
     - name: Build package
         run: python setup.py sdist bdist_wheel
 
