--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,17 +19,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v4
       with:
-        python-version: "3.10"
+        python-version: "3.11"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pytest
     - name: Run tests
       run: |
-        cd .\test\
+        cd ./test
         pytest test_buscaHorario.py
     - name: Build package
       run: python setup.py sdist bdist_wheel
