--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,7 +13,7 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  test:
 
     runs-on: ubuntu-latest
 
@@ -27,12 +27,18 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pytest
-    - name: Run tests
+    - name: Run tests and generate report
       run: |
+        mkdir -p ./test/results
         cd ./test
-        pytest test_buscaHorario.py
+        pytest test_buscaHorario.py --junitxml=results/results.xml 
     - name: Upload Build Artifact
       uses: actions/upload-artifact@v4
       with:
         name: build-artifact
         path: dist/
+    - name: Upload Test Reports
+      uses: actions/upload-artifact@v4
+      with:
+        name: test-reports
+        path: ./test/results/results.xml
