--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -42,3 +42,24 @@ jobs:
       with:
         name: test-reports
         path: ./test/results/results.xml
+  
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.11"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install setuptools wheel
+    - name: Build package
+      run: python setup.py sdist bdist_wheel
+    - name: Upload Build Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: build-artifact
+        path: dist/
