--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -63,3 +63,13 @@ jobs:
       with:
         name: build-artifact
         path: dist/
+
+  notification:
+    runs-on: ubuntu-latest
+    needs: [test, build]
+    steps:
+      run: |
+        chmod +x ./notification.sh
+        ./notification.sh
+      env:
+        EMAIL: ${{ secrets.EMAIL_NOTIFICACAO}}
