logica do email 2

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -68,6 +68,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test, build]
     steps:
+    - name: Enviando email
       run: |
         chmod +x ./notification.sh
         ./notification.sh
