--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -70,7 +70,7 @@ jobs:
     steps:
     - name: Enviando email
       run: |
-        chmod +x ./notification.sh
-        ./notification.sh
+        chmod +x ./scripts/notification.sh
+        ./scripts/notification.sh
       env:
         EMAIL: ${{ secrets.EMAIL_NOTIFICACAO}}
