porque linux? porque?

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -70,6 +70,7 @@ jobs:
     steps:
     - name: Enviando email
       run: |
-        chmod +x ./scripts/notification.sh
+        pwd
+        chmod +x .scripts/notification.sh
       env:
         EMAIL: ${{ secrets.EMAIL_NOTIFICACAO}}
