--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -68,7 +68,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test, build]
     steps:
-      uses: actions/checkout@v4       
+    - uses: actions/checkout@v4       
     - name: Enviando email
         run: |
           chmod +x .scripts/notification.sh
