--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -71,7 +71,6 @@ jobs:
     - uses: actions/checkout@v4       
     - name: Enviando email
       run: |
-        chmod +x .scripts/notification.sh
-        .scripts/notification.sh
+        sh scripts/notification.sh
       env:
         EMAIL_NOTIFICACAO: ${{ secrets.EMAIL_NOTIFICACAO }}
