--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -68,9 +68,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test, build]
     steps:
-    - uses: actions/checkout@v4       
     - name: Enviando email
-      run: |
-        sh scripts/notification.sh
-      env:
-        EMAIL_NOTIFICACAO: ${{ secrets.EMAIL_NOTIFICACAO }}
+      uses: actions/checkout@v4       
+    - run: sh scripts/notification.sh
+      
