--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -72,4 +72,4 @@ jobs:
       uses: actions/checkout@v4
     - run: sh scripts/notification.sh
     env:
-      EMAIL_NOTIFACACAO: ${{ secrets.EMAIL_NOTIFICACAO }}
+      EMAIL_NOTIFICACAO: ${{ secrets.EMAIL_NOTIFICACAO }}
