--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -70,7 +70,11 @@ jobs:
     steps:
     - name: Enviando email
       uses: actions/checkout@v4
-    - run: chmod +x scripts/notification.sh
+    - run: |
+        chmod +x scripts/notification.sh
+        ./scripts/notification.sh
+    
+
     env:
       EMAIL_NOTIFICACAO: ${{ secrets.EMAIL_NOTIFICACAO }}
 
