--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -72,7 +72,7 @@ jobs:
       uses: actions/checkout@v4
     - run: |
         chmod +x scripts/notification.sh
-        ./scripts/notification.sh
+        sh scripts/notification.sh
     
 
     env:
